--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ash = "0.37.3"
+ash-window = "0.12.0"
+raw-window-handle = "0.5.0"
 winit = "0.28.7"
