--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,24 @@ ash = "0.37.3"
 ash-window = "0.12.0"
 raw-window-handle = "0.5.0"
 ultraviolet = "0.9.2"
-egui-winit-ash-integration = { git = "https://github.com/stefnotch/egui-winit-ash-integration", branch = "patch-1" }
 gpu-allocator = { version = "0.23", default-features = false, features = ["vulkan"] }
 egui = "0.23.0"
 crevice = { git = "https://github.com/YouSafe/crevice", branch = "main", features = ["ultraviolet"] }
 
+# I gotta duplicate stuff, because the alternative https://github.com/rust-lang/cargo/issues/1197 is not implemented. 
 [target.'cfg(windows)'.dependencies]
 winit = { version = "0.28", default-features = false }
+[target.'cfg(windows)'.dependencies.egui-winit-ash-integration]
+git = "https://github.com/stefnotch/egui-winit-ash-integration"
+default-features = false
+features = ["gpu-allocator-feature", "clipboard"]
+branch = "patch-1"
 
 [target.'cfg(not(windows))'.dependencies]
 winit = { version = "0.28" }
+[target.'cfg(not(windows))'.dependencies.egui-winit-ash-integration]
+git = "https://github.com/stefnotch/egui-winit-ash-integration"
+default-features = false
+features = ["gpu-allocator-feature", "default"]
+branch = "patch-1"
+
