--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ ultraviolet = "0.9.2"
 gpu-allocator = { version = "0.23", default-features = false, features = ["vulkan"] }
 egui = "0.23.0"
 crevice = { git = "https://github.com/YouSafe/crevice", branch = "main", features = ["ultraviolet"] }
+gltf = { version = "1.3.0", default-features = false, features = ["import", "utils", "names", "KHR_lights_punctual", "KHR_materials_emissive_strength"] }
 
 # I gotta duplicate stuff, because the alternative https://github.com/rust-lang/cargo/issues/1197 is not implemented. 
 [target.'cfg(windows)'.dependencies]
