--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ egui-winit-ash-integration = { version = "0.5", default-features = false, featur
 [target.'cfg(not(windows))'.dependencies]
 winit = { version = "0.28" }
 egui-winit-ash-integration = { version = "0.5", default-features = false, features = ["gpu-allocator-feature", "default"] }
+
+[profile.dev.package.gltf]
+opt-level = 1
