--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2021"
 ash = "0.37.3"
 ash-window = "0.12.0"
 raw-window-handle = "0.5.0"
-ultraviolet = "0.9.2"
+ultraviolet = { version = "0.9.2", features = ["serde"] }
 gpu-allocator = { version = "0.23", default-features = false, features = ["vulkan"] }
 egui = "0.23.0"
 crevice = { git = "https://github.com/YouSafe/crevice", branch = "main", features = ["ultraviolet"] }
 gltf = { version = "1.3.0", default-features = false, features = ["import", "utils", "names", "KHR_lights_punctual", "KHR_materials_emissive_strength"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0" }
 
 # I gotta duplicate stuff, because the alternative https://github.com/rust-lang/cargo/issues/1197 is not implemented. 
 [target.'cfg(windows)'.dependencies]
