--- a/asset_server/Cargo.toml
+++ b/asset_server/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-atomicwrites = "0.4.2"
-env_logger = "0.10.1"
-ipc-channel = "0.18.0"
-tokio = "1.34.0"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3.3"
+atomicwrites = "0.4"
+env_logger = "0.10"
+ipc-channel = "0.18"
+walkdir = "2"
+notify-debouncer-full = { version = "0.3.1", default-features = false }
+tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
