--- a/asset_server/Cargo.toml
+++ b/asset_server/Cargo.toml
@@ -8,12 +8,13 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
-atomicwrites = "0.4"
+log = "0.4.20"
 env_logger = "0.10"
 ipc-channel = "0.18"
 walkdir = "2"
 notify-debouncer-full = { version = "0.3.1", default-features = false }
 tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
-uuid = { version = "1.5", features = ["v4"] }
+uuid = { version = "1.5", features = ["v4", "serde"] }
 relative-path = { version = "1.9", features = ["serde"] }
 anyhow = { version = "1.0" }
+sled = { version = "1.0.0-alpha.118" }
