--- a/asset_server/Cargo.toml
+++ b/asset_server/Cargo.toml
@@ -17,4 +17,4 @@ tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
 uuid = { version = "1.5", features = ["v4", "serde"] }
 relative-path = { version = "1.9", features = ["serde"] }
 anyhow = { version = "1.0" }
-sled = { version = "1.0.0-alpha.118" }
+redb = "1.3.0"
