--- a/asset_server/Cargo.toml
+++ b/asset_server/Cargo.toml
@@ -18,4 +18,4 @@ uuid = { version = "1.5", features = ["v4", "serde"] }
 relative-path = { version = "1.9", features = ["serde"] }
 anyhow = { version = "1.0" }
 redb = "1.3"
-im = "15.1"
+thiserror = "1.0"
