--- a/asset_server/Cargo.toml
+++ b/asset_server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 bincode = "1.3"
 log = "0.4.20"
 env_logger = "0.10"
