--- a/asset_common/Cargo.toml
+++ b/asset_common/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "asset_client"
+name = "asset_common"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-asset_common = { path = "../asset_common" }
-serde = { version = "1.0" }
+serde = { version = "1.0", features = ["derive"] }
 interprocess = { version = "1.2.1", default-features = false }
+bincode = "1.3"
