--- a/asset_server/Cargo.toml
+++ b/asset_server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+asset_common = { path = "../asset_common" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bincode = "1.3"
@@ -20,3 +21,4 @@ relative-path = { version = "1.9", features = ["serde"] }
 anyhow = { version = "1.0" }
 redb = "1.3"
 thiserror = "1.0"
+interprocess = { version = "1.2.1", default-features = false }
