--- a/asset_server/Cargo.toml
+++ b/asset_server/Cargo.toml
@@ -22,3 +22,4 @@ anyhow = { version = "1.0" }
 redb = "1.3"
 thiserror = "1.0"
 interprocess = { version = "1.2.1", default-features = false }
+gltf = { version = "1.3.0", default-features = false, features = ["import", "utils", "names", "KHR_lights_punctual", "KHR_materials_emissive_strength"] }
